--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h2 id="logot"> <img src="logo1.png" id="logom" />Heaven Notes <a href="#description0" title="Know us better">Who are we?</a> || 
 		<a href="#description1" title="You'll cry of feeling proud">Our message</a>
  || <a href="#description3" title="We're not playing all the time you know..">Company's Activities</a>
- || <a href="#description" title="Come with us !!">Jobs</a> </h2>
+ || <a href="#description4" title="Come with us !!">Jobs</a> </h2>
 		
 		</div>
 	<div id="begin">
